--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@ li a:hover:not(.active) {
     <a name="Photoshop"></a>
     <h1 style="margin-left:43%;padding:0px 0px;">Photoshop</h1>
     <img src="Color.jpg" alt="Lake with different colors than usual by using saturation and other effects on the image in photoshop." style="width:800px;height:900px;">
-    <img src="EyeballCool.png" alt="Using the Elliptical Tool in photoshop to put a galaxy image inside of an eyeball." Align="top" style="width:875px;height:680px;">
+    <img src="https://user-images.githubusercontent.com/61669752/135288254-d98e20b0-67b7-4ae4-bf34-7388d31b6066.png" alt="Using the Elliptical Tool in photoshop to put a galaxy image inside of an eyeball." Align="top" style="width:875px;height:680px;">
     <img src="blankwall.jpg" alt="Using the healing brush tool to remove text on a white wall." Align="right"   style="width:1680px;height:1420px;">
     <img src="vista.jpg" alt="Using everything we have learned throughout the semester to make a mountain vista logo" Align="right" style="width:1680px;height:670px;"> 
     <img src="background.jpg" alt="Using photoshops tools so that I am able to create more foreground to the image." Align="right" style="width:1680px;height:670px;">
