--- a/index.html
+++ b/index.html
@@ -95,6 +95,12 @@ li a:hover:not(.active) {
     
 </div>
 
+<div style="margin-left:10%;padding:1px 16px;height:1000px;">
+    <a name="Other"></a>
+    <h1 style="margin-left:43%;padding:0px 0px;">Other</h1>
+    
+</div>
+
 <!---->
 
 </body>
