--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ li a:hover:not(.active) {
 
 <div style="margin-left:10%;padding:1px 16px;height:1000px;">
     <a name="Learning more about photoshop"></a>
-    <h1 style="margin-left:43%;padding:0px 0px;">Illustrator</h1>
+    <h1 style="margin-left:43%;padding:0px 0px;">weaweqweaweasdssdfsdfs</h1>
     
 </div>
 
