--- a/index.html
+++ b/index.html
@@ -84,14 +84,14 @@ li a:hover:not(.active) {
 </div>
 
 <div style="margin-left:10%;padding:1px 16px;height:1000px;">
-    <a name="Learning more about photoshop"></a>
+    <a name="Illustrator"></a>
     <h1 style="margin-left:43%;padding:0px 0px;">weaweqweaweasdssdfsdfs</h1>
     
 </div>
 
 <div style="margin-left:10%;padding:1px 16px;height:1000px;">
     <a name="Final Project/PSA"></a>
-    <h1 style="margin-left:43%;padding:0px 0px;">Other</h1>
+    <h1 style="margin-left:43%;padding:0px 0px;">Othqweqweqweqwr</h1>
     
 </div>
 <!---->
